2015-01-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Updated.
	* java/util/Objects.java: New class.
	(compareTo(T,T,Comparator)): Implemented.
	(deepEquals(Object,Object)): Likewise.
	(equals(Object,Object)): Likewise.
	(hash(Object...)): Likewise.
	(hashCode(Object)): Likewise.
	(requireNonNull(T)): Likewise.
	(requireNonNull(T,String)): Likewise.
	(toString(Object)): Likewise.
	(toString(Object,String)): Likewise.

2014-12-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/64176
	* NEWS: Updated.
	* java/util/GregorianCalendar.java:
	(computeFields()): Handle the week that runs over
	the end of the year and the beginning of the next
	one, so that it is numbered the same in both years.
	(getBaseWeekOfYear(int,int,int)): Broken out of
	computeFields to avoid code duplication.
	(getRelativeWeekday(int)): Likewise.

2014-11-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/64109
	* NEWS: Updated.
	* native/jni/java-util/Makefile.am:
	Link against jcl library.

2014-09-15  Guillermo Rodriguez  <guille.rodriguez@gmail.com>

	* doc/www.gnu.org/announce/20120307.wml:
	Add 0.99 release announcement.
	* doc/www.gnu.org/downloads/downloads.wml:
	List 0.99. Move to 0.98 to previous releases.
	* doc/www.gnu.org/newsitems.txt:
	Add 0.99 news item.

2014-10-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac:
	Add --enable-warnings so warnings can be turned
	on and off. Invoke IT_USING_ECJ during compiler
	checks.
	* examples/Makefile.am:
	Split options for GCJ, javac and ecj.
	* lib/Makefile.am: Likewise.
	* m4/acinclude.m4:
	(IT_USING_ECJ): New macro taken from IcedTea to
	detect the use of ecj.
	* tools/Makefile.am:
	Split options for GCJ, javac and ecj.

2014-05-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/lang/model/util/AbstractAnnotationValueVisitor6.java:
	New abstract class.
	(AbstractAnnotationValueVisitor6()): Implemented.
	(visit(AnnotationValue)): Likewise.