@@ -1,3 +1,14 @@
+2015-01-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/64881
+	* NEWS: Updated.
+	* java/security/KeyPairGenerator.java:
+	(genKeyPair()): Document properly. Call original
+	method, generateKeyPair().
+	(generateKeyPair()): Document properly. Use provider
+	and algorithm values if set rather than just defaulting
+	to GNU and DSA.
+
 2015-01-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* NEWS: Updated.
